--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 8/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 8/LaTex/config.tex
@@ -10,7 +10,7 @@
 \usepackage[backend=biber,style=numeric,url=true]{biblatex} % für Quellenangaben und Bibliotheken
 \usepackage[]{hyperref} % für hyperlinks
 \usepackage{array} % für die Tabelle
-\addbibresource{ref.bib}  % Add your .bib file here
+\addbibresource{quellen.bib}  % Add your .bib file here
 
 % Paket für die Baumdiagramdarstellung
 \usepackage{tikz}
