--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 8/LaTex/Aufgabe_1.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 8/LaTex/Aufgabe_1.tex
@@ -77,11 +77,15 @@ Output: a591a6d40bf420404a011733cfb7b190d62c65bf0bcda32b57b277d9ad9f146e
 
 \vspace{1em}
 
+\newpage
 \subsection*{b) Verkettete Liste mit Hashreferenzen}
 
 Implementieren Sie in \texttt{Scala} eine einfach verkettete Liste mit Hashreferenzen.  
 In den Knoten der einfach verketteten Liste sollen \texttt{String}-Objekte gespeichert werden.  
 Verwenden Sie dazu eine kryptographische Hashfunktion wie in Teil (a).
+
+\lstinputlisting[language=Scala]{./Code/1b.scala}
+
 
 \vspace{1em}
 
