--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 8/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 8/LaTex/config.tex
@@ -1,7 +1,7 @@
 \usepackage[left=3cm, right=2.5cm]{geometry} % Hier die Ränder definieren
 
-\usepackage [latin1]{inputenc}
-
+%\usepackage[T1]{fontenc}
+%\usepackage[ngerman]{babel}
 
 \usepackage[pdftex]{graphicx}
 %%%%% Path for Pictures %%%%%%
