--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_1.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_1.tex
@@ -1,146 +1,8 @@
-\section*{Problem 1: Kryptographische Hashfunktionen und Blockchain}
+\section*{Problem 1: Suchen in Zeichenketten I}
 
-\subsection*{a) Kryptographische Hashfunktionen in Scala}
-
-Welche kryptographischen Hashfunktionen sind in Scala implementiert?  
-Wie kann man sie verwenden?
-
-
-\subsubsection*{Lösung: Non-cryptographic hashfunctions}
-
-Scala3 hat keine eigene Kryptographische Hashfunktion Implementiert (jedenfalls habe ich nichts gefunden). \\
-
-In Scala hat man die Möglichkeit interne Hashfunktionen zu benutzten wie z.B. mit hashCode() methode\cite{hashCode}:
-\begin{lstlisting}[language=Scala]
-scala> val result = "hello".hashCode()
-val result: Int = 99162322
-\end{lstlisting}
-Dies dient aber nicht der Kryptographischen Verschlüsselung von Werten, da es hierbei zu viele Kollisionen kommt, eher ist es zur Kontrolle von Werten gedacht.\\
-
-Eine weitere Möglichkeit ist es über eine zusätzliche Scala Library zusätzliche Hashfunktionen zu benutzen: \textit{scala.util.hashing.Hashing} \cite{scala.util}\\
-
-\lstinputlisting[language=Scala]{./Code/Scalatest.scala}
-
-\begin{verbatim}
-Output: 69490486
-\end{verbatim}
-
-\subsubsection*{MurmurHash3}
-
-Oder auch eine Implementierung von MurmurHash3 von Rex Kerr. Auch dieser ist aber ein \textit{non-cryptographic hashing algorithm} \cite{murmurhash3}
-
-\lstinputlisting[language=Scala]{./Code/murmurHash3.scala}
-
-\begin{verbatim}
-Output: -608680269
-\end{verbatim}
-
-\subsubsection*{Kryptographische Hashfunktionen}
-
-Um Kryptographische Hashfunktionen in Scala zu benutzen, müssen wir auf Bibliotheken von Java zurückgreifen. Um dies zu tun, Importieren wir z.B.:\textit{java.security.MessageDigest} - für die Nutzung von SHA-256, MD5 oder auch SHA-1.\cite{sha-256}
-
-\begin{lstlisting}[language=Scala]
-import java.security.MessageDigest
-\end{lstlisting}
-
-Um z.B.: SHA-256 zu verwenden, müssen wir die vorgefertigten Methoden, getInstance(), digest(), benutzen
-
-\begin{lstlisting}[language=Scala]
-import java.security.MessageDigest
-
-
-@main def run(): Unit =
-
-  val message = "Hello World"
-  val sha256 = MessageDigest.getInstance("SHA-256")
-  val hashWert = sha256.digest(message.getBytes("UTF-8"))
-
-  println(hashWert)
-\end{lstlisting}
-
-\begin{verbatim}
-Output: [B@45820e51
-\end{verbatim}
-
-\begin{itemize}
-\item MessageDigest - ruft das Objekt auf
-\item getInstance() - Returns a MessageDigest object that implements the specified digest algorithm.
-\item digest - Performs a final update on the digest using the specified array of bytes, then completes the digest computation.
-\end{itemize}
-
-Da wir bei \textit{println(hashWert)} eine Standard-toString-Ausgabe von einem Java-Array erhalten( also in Bytes ), müssen wir die Ausgabe noch einmal in Hex-Zahlen umwandeln:
-
-\lstinputlisting[language=Scala]{./Code/SHA-256.scala}
-\begin{verbatim}
-Output: a591a6d40bf420404a011733cfb7b190d62c65bf0bcda32b57b277d9ad9f146e
-\end{verbatim}
-
-\vspace{1em}
-
-\newpage
-\subsection*{b) Verkettete Liste mit Hashreferenzen}
-
-Implementieren Sie in \texttt{Scala} eine einfach verkettete Liste mit Hashreferenzen.  
-In den Knoten der einfach verketteten Liste sollen \texttt{String}-Objekte gespeichert werden.  
-Verwenden Sie dazu eine kryptographische Hashfunktion wie in Teil (a).
-
-\lstinputlisting[language=Scala]{./Code/1b.scala}
-
-\begin{verbatim}
-Output:
-Daten: Alice
-PrevHash: 5923931d867e648ec3e488074d631134d596b6a5424c5165258e9a6475fdc777
-
-Daten: Bob
-PrevHash: 12775e79fe15fd6aa0fcf6605550b6cc45ec10552c6d0b72685815af763f4774
-
-Daten: Charlie
-PrevHash: 0000000000000000000000000000000000000000000000000000000000000000
-\end{verbatim}
-
-\newpage
-\subsection*{c) Nonce und Hash mit Nullen am Ende}
-
-Fügen Sie zu den Knoten Ihrer einfach verketteten Liste jeweils ein \emph{Nonce} hinzu,  
-und stellen Sie sicher, dass die Hashwerte in den Referenzen alle mit acht Nullen (in der Binärdarstellung) enden.  
-
-Wie viele Versuche sind dazu im Durchschnitt nötig?\\
-
-\lstinputlisting[language=Scala]{./Code/1c.scala}
-
-\begin{verbatim}
-Output:
-Daten: Alice
-PrevHash: 8efdfdc4cc1b5cb65ea1570e1371eac8ae7fb84f1b65c4f2b6d7f5d85f7c5700
-Nonce:    471
-Hash:     53c7e0c85a3182285cf4d837dfa1d495d5c883ac94f43b970c567b4d0a314e00
-
-Daten: Bob
-PrevHash: 213f013d20bc293b36a9fa7a59444aed5a881af4f17a41de31ca27ec7cf9e100
-Nonce:    101
-Hash:     8efdfdc4cc1b5cb65ea1570e1371eac8ae7fb84f1b65c4f2b6d7f5d85f7c5700
-
-Daten: Charlie
-PrevHash: 0000000000000000000000000000000000000000000000000000000000000000
-Nonce:    47
-Hash:     213f013d20bc293b36a9fa7a59444aed5a881af4f17a41de31ca27ec7cf9e100
-\end{verbatim}
-
-Die Ausgabe des hashes erfolgt in Hexadezimal Darstellung.\\
-Ein Byte = 8 Bit = 00000000 bis 11111111 $\rightarrow$ was in Hex = \textbf{00} bis FF sind.  Das heißt, die letzten beiden Nullen sind die Hexadezimaldarstellung für 8 Nullen in Binärdarstellung.
-
-\subsubsection*{Druchschnittliche Versuche:}
-
-Die Kryptographische Hashfunktion SHA-256 produziert genau 256 Bit oder auch 32 Byte. Die Wahrscheinlichkeit das ein Bit entweder 0 oder 1 annimmt ist $\frac{1}{2}$. Da die Letzten 8 Bit oder auch 1 Byte Null sein sollen ergibt sich folgende Formel:\\
-
-\begin{center}
-$P(alle 8 Bits = 0)=(\frac{1}{2})^8 = \frac{1}{256}$
-\end{center}
-
-Der Erwartungswert ist dann:
-
-\begin{center}
-$\text{Erwartungswert}=\frac{1}{P}= \frac{1}{\frac{1}{256}} = 256$
-\end{center}
-
-Die Wahrscheinlichkeit um am Ende Acht Nullen zu ziehen ist also $\frac{1}{256}$, bzw. braucht man ungefähr 256 versuche um den gewünschten Nonce zu berechnen.
+Implementieren Sie den naiven Algorithmus und den Algorithmus von Rabin-Karp
+zur Suche in Zeichenketten. Finden Sie dann heraus, wie oft das Wort whale in Moby
+Dick vorkommt (ignorieren Sie dabei Groß- und Kleinschreibung). Wie schneiden
+Ihre Implementierungen im Vergleich ab?
+Hinweis: Den Roman Moby Dick finden Sie unter\\
+http://www.gutenberg.org/files/2701/2701-0.txt.
