New formatting for Headers

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_1.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_1.tex
@@ -1,4 +1,4 @@
-\section*{Problem 1: Suchen in Zeichenketten I}
+\section{Problem: Suchen in Zeichenketten I}
 
 Implementieren Sie den naiven Algorithmus und den Algorithmus von Rabin-Karp
 zur Suche in Zeichenketten. Finden Sie dann heraus, wie oft das Wort whale in Moby
