--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_3.tex
@@ -1,20 +1,21 @@
-\section*{Problem 3: Suche in Zeichenketten III}
+\section{Problem: Suche in Zeichenketten III}
 
  Sei $\sum = C, G, T, A.$ Sei $s = CTTGGATTA$ und $t = TTA$.
 
 
 
-\begin{enumerate}
-\item Verwenden Sie den naiven Algorithmus, um festzustellen, ob/wo das Muster t
+\subsection{Naiver Algorithmus}
+Verwenden Sie den naiven Algorithmus, um festzustellen, ob/wo das Muster t
 in der Zeichenkette s vorkommt.
 Zeigen Sie die einzelnen Schritte.
 
-\item Verwenden Sie den Algorithmus von Rabin-Karp, um festzustellen, ob/wo das
+\subsection{Rabin-Karp Algorithmus}
+Verwenden Sie den Algorithmus von Rabin-Karp, um festzustellen, ob/wo das
 Muster t in der Zeichenkette s vorkommt. Verwenden Sie A : 0, T : 1, G : 2, C :
 3 und die Primzahl 5 als Modulus für die Hashfunktion.
 Zeigen Sie die einzelnen Schritte.
 
-\item  Verwenden Sie den Algorithmus von Knuth-Morris-Pratt, um festzustellen,
+\subsection{Knth-Morris-Pratt Algorithmus}
+Verwenden Sie den Algorithmus von Knuth-Morris-Pratt, um festzustellen,
 ob/wo das Muster t in der Zeichenkette s vorkommt.
 Zeigen Sie die einzelnen Schritte.
-\end{enumerate}
