added some resources for task 2

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/quellen.bib
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/quellen.bib
@@ -1,26 +1,16 @@
 \usepackage{hyperref}
 
-@online{hashCode,
-    author = {Geeksforgeeks},
-    title ={Scala String hashCode() method with example},
-    url  = {https://www.geeksforgeeks.org/scala/scala-string-hashcode-method-with-example/},
-    addendum = {(accessed: 19.06.2025)},
+@online{Wikipedia-Rabin-Karp,
+    author = {Wikipedia-Contributors},
+    title ={Rabin-Karp Multiple pattern search},
+    url={https://en.wikipedia.org/wiki/Rabin%E2%80%93Karp_algorithm#Multiple_pattern_search},
+    addendum = {(accessed: 25.06.2025)},
 }
-@online{scala.util,
-    author = {Scala 3 Docs},
-    title ={Hashing},
-    url  = {https://www.scala-lang.org/api/current/scala/util/hashing/Hashing$.html},
-    addendum = {(accessed: 19.06.2025)},
-}
-@online{murmurhash3,
-    author = {Scala 3 Docs},
-    title ={MurmurHash3},
-    url  = {https://www.scala-lang.org/api/current/scala/util/hashing/MurmurHash3$.html},
-    addendum = {(accessed: 19.06.2025)},
-}
-@online{sha-256,
-    author = {Oracle Docs},
-    title ={SHA-256: Java-Scala},
-    url  = {https://docs.oracle.com/javase/8/docs/api/java/security/MessageDigest.html},
-    addendum = {(accessed: 19.06.2025)},
+
+
+@online{Stackoverflow-Rabin-Karp,
+	author = {Nick Dandoulakis-User},
+	title ={Using Rabin-Karp to search for multiple patterns in a string},
+	url={https://stackoverflow.com/questions/1318126/using-rabin-karp-to-search-for-multiple-patterns-in-a-string},
+	addendum = {(accessed: 25.06.2025)},
 }
