--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/config.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/config.tex
@@ -95,4 +95,7 @@
 \pagestyle{fancy}
 \fancyhf{} % löscht Standard-Kopf- und Fußzeilen
 
+\fancyhead[L]{Moritz Ruge \& Lennard Wittenberg} % Linke Kopfzeile
+\fancyhead[C]{Assignment 9} % Linke Kopfzeile
+\fancyhead[R]{Algorithmen \& Datenstrukturen} % Linke Kopfzeile
 \fancyfoot[C]{\thepage/\pageref{LastPage}} % zentrierte Fußzeile mit "Seite/Gesamt"
