--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_3.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_3.tex
@@ -15,7 +15,7 @@ Muster t in der Zeichenkette s vorkommt. Verwenden Sie A : 0, T : 1, G : 2, C :
 3 und die Primzahl 5 als Modulus für die Hashfunktion.
 Zeigen Sie die einzelnen Schritte.
 
-\subsection{Knth-Morris-Pratt Algorithmus}
+\subsection{Knuth-Morris-Pratt Algorithmus}
 Verwenden Sie den Algorithmus von Knuth-Morris-Pratt, um festzustellen,
 ob/wo das Muster t in der Zeichenkette s vorkommt.
 Zeigen Sie die einzelnen Schritte.
