renamend so things and added another reference

--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_2.tex
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/Aufgabe_2.tex
@@ -26,7 +26,7 @@ Gegeben:
 	\item Wenn die Hashwerte übereinstimmen, vergleichen wir den Text-ausschnitt und Muster direkt, um Kollisionen zu umgehen
 \end{itemize}
 
-\subparagraph{Rabin-Karb für mehrere Muster:}\cite{Stackoverflow-Rabin-Karp}
+\subparagraph{Rabin-Karb für mehrere Muster:}\cite{Stackoverflow-Rabin-Karp}\cite{Java-HashSet}
 \begin{itemize}
 	\item Wir berechnen den Hashwert für alle Suchmuster $t_1,t_2, \dots, t_k$
 	\begin{itemize}
