--- a/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/quellen.bib
+++ b/Semester_2/Algorithmen und Datenstrukturen/Assignment 9/LaTex/quellen.bib
@@ -14,3 +14,9 @@
 	url={https://stackoverflow.com/questions/1318126/using-rabin-karp-to-search-for-multiple-patterns-in-a-string},
 	addendum = {(accessed: 25.06.2025)},
 }
+@online{Java-HashSet,
+	author = {Cats In Code},
+	title ={Java HashSet: What It Is, When and How To Use It?},
+	url={https://catsincode.com/java-hashset-examples/},
+	addendum = {(accessed: 25.06.2025)},
+}
